# cmake-reader

./: CMakeLists.txt  README.md  files.cmake  interpreter.cpp  interpreter.h  program.cpp  tokenizer.cpp  tokenizer.h
